--- a/index.html
+++ b/index.html
@@ -2,75 +2,79 @@
 <html>
 
 <head>
-    <title>Page Title</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <title>jane's portfolio</title>
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="topper">
-        <div>
-            <h1 class="name"> Jane Quintero </h1>
-            <p> Software Engineer </p>
-        </div>
-
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link" href="https://linkedin.com/in/quinq">LinkedIn</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/quinqu">Github</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Mail</a>
-            </li>
-          </ul>
+  <div class="topper">
+    <div>
+      <h1 class="name"> Jane Quintero </h1>
+      <p> Software Engineer </p>
     </div>
 
-    <div class="about">
-        <p class="para">
-          I am currently a software engineer on the scaling and robustness team at <a class="teleport" href="https://goteleport.com">Teleport</a> and went to <a class="ada" href="https://adadevelopersacademy.org/">Ada Developers Academy</a>, a highly immersive and competitive 
-          school in Seattle, for full-stack engineering. I now work on building robust and highly available systems by monitoring application performance and optimize for 
-          scalability and site reliability. Additionally, I work in OSS and this gives me the chance to work with the greater Teleport community (which I love) to deliver new features
-          and fix existing bugs. 
-        <p>
-    </div>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="https://linkedin.com/in/quinq">LinkedIn</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/quinqu">Github</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Mail</a>
+      </li>
+    </ul>
+  </div>
 
-    <div class="content">
-        <h3 class="technologies"> Technologies I Use </h3>
-        <ul>
-            <li> Go, Ruby, Javascript</li>
-            <li> AWS, Docker, Git, Kubernetes</li>
-            <li> Rails &  React</li>
-        </ul>
-    </div>
+  <div class="about">
+    <p class="para">
+      I am currently a software engineer on the scaling and robustness team at <a class="teleport"
+        href="https://goteleport.com">Teleport</a> and went to <a class="ada"
+        href="https://adadevelopersacademy.org/">Ada Developers Academy</a>, a highly immersive and competitive
+      school in Seattle, for full-stack engineering. I now work on building robust and highly available systems by
+      monitoring application performance and optimize for
+      scalability and site reliability. Additionally, I work in OSS and this gives me the chance to work with the
+      greater Teleport community (which I love) to deliver new features
+      and fix existing bugs.
+    <p>
+  </div>
 
-    <div class="projects">
-        <h3 class=""> Projects </h3>
-        <dl class="row projs">
-            <dt class="col-sm-3"> <a class="proj" href="#">Echo Server  </a></dt>
-            <dd class="col-sm-9">
-                The server echos the client's request in the
-                response, built in Golang, encryption using
-                TLS, authentication through generation of token
-                on server startup, tested concurrent server
-                for deadlocks and data races.</dd>
-          
-            <dt class="col-sm-3"> <a class="proj" href="#">Tempo  </a></dt>
-            <dd class="col-sm-9">
-              <p>Built with UI Kit frontend framework, Swift,
-                and Ruby backend, implemented a wrapper
-                for the Spotify API for more specific
-                requests. User enters their height and
-                speed, a playlist based on those metrics will
-                be created in the user's Spotify account.</p>
-            </dd>
-          
-            <dt class="col-sm-3"> <a class="proj" href="#">Soft Blush  </a></dt>
-            <dd class="col-sm-9">An indie and dream pop music project I dabble in when I am not coding!</dd>
-        </dl>
-    </div>
+  <div class="content">
+    <h3 class="technologies"> Technologies I Use </h3>
+    <ul>
+      <li> Go, Ruby, Javascript</li>
+      <li> AWS, Docker, Git, Kubernetes</li>
+      <li> Rails & React</li>
+    </ul>
+  </div>
+
+  <div class="projects">
+    <h3 class=""> Projects </h3>
+    <dl class="row projs">
+      <dt class="col-sm-3"> <a class="proj" href="#">Echo Server </a></dt>
+      <dd class="col-sm-9">
+        The server echos the client's request in the
+        response, built in Golang, encryption using
+        TLS, authentication through generation of token
+        on server startup, tested concurrent server
+        for deadlocks and data races.</dd>
+
+      <dt class="col-sm-3"> <a class="proj" href="#">Tempo </a></dt>
+      <dd class="col-sm-9">
+        <p>Built with UI Kit frontend framework, Swift,
+          and Ruby backend, implemented a wrapper
+          for the Spotify API for more specific
+          requests. User enters their height and
+          speed, a playlist based on those metrics will
+          be created in the user's Spotify account.</p>
+      </dd>
+
+      <dt class="col-sm-3"> <a class="proj" href="#">Soft Blush </a></dt>
+      <dd class="col-sm-9">An indie and dream pop music project I dabble in when I am not coding!</dd>
+    </dl>
+  </div>
 
 </body>
 
