--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
   <div class="projects">
     <h3 class=""> Projects </h3>
     <dl class="row projs">
-      <dt class="col-sm-3"> <a class="proj" href="#">Echo Server </a></dt>
+      <dt class="col-sm-3"> <a class="proj" href="https://github.com/quinqu/echo-server">Echo Server </a></dt>
       <dd class="col-sm-9">
         The server echos the client's request in the
         response, built in Golang, encryption using
         TLS, authentication through generation of token
-        on server startup, tested concurrent server
-        for deadlocks and data races.</dd>
+        on server startup, included testing for deadlocks and data races.</dd>
 
-      <dt class="col-sm-3"> <a class="proj" href="#">Tempo </a></dt>
+      <dt class="col-sm-3"> <a class="proj" href="https://github.com/quinqu/tempo">Tempo </a></dt>
       <dd class="col-sm-9">
         <p>Built with UI Kit frontend framework, Swift,
           and Ruby backend, implemented a wrapper
@@ -71,7 +70,7 @@
           be created in the user's Spotify account.</p>
       </dd>
 
-      <dt class="col-sm-3"> <a class="proj" href="#">Soft Blush </a></dt>
+      <dt class="col-sm-3"> <a class="proj" href="https://soundcloud.com/quinq">Soft Blush</a></dt>
       <dd class="col-sm-9">An indie and dream pop music project I dabble in when I am not coding!</dd>
     </dl>
   </div>
